<resources>
    <string name="app_name">MyPortfolio</string>

    <string name="nano_apps">My Nano Degree Apps</string>
    <string name="action_settings">Settings</string>
    <string name="spotify_app">SPOTIFY STREAMER</string>
    <string name="scores_app">SCORES APP</string>
    <string name="library_app">LIBRARY APP</string>
    <string name="build_app">BUIlD IT BIGGER</string>
    <string name="xyz_app">XYZ READER</string>
    <string name="my_app">CAPSTONE:My OWN APP</string>

</resources>
