<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="#ffa09b9c">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/nano_apps"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"

        style="@style/TitleFont"/>


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/spotify_app"
            android:id="@+id/button"
            style="?android:attr/borderlessButtonStyle"
            android:background="@drawable/button_custom"
            android:layout_marginTop="35dp"
            android:layout_below="@+id/textView"
            android:layout_alignEnd="@+id/textView"
            android:layout_alignStart="@+id/textView"
            android:onClick="showToast"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/scores_app"
            android:id="@+id/button2"
            android:layout_below="@+id/button"
            android:layout_alignStart="@+id/button"
            android:layout_alignEnd="@+id/button"
            style="?android:attr/borderlessButtonStyle"
            android:background="@drawable/button_custom"
            android:layout_marginTop="10dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/library_app"
            android:id="@+id/button3"
            android:layout_below="@+id/button2"
            android:layout_alignStart="@+id/button2"
            android:layout_alignEnd="@+id/button2"
            style="?android:attr/borderlessButtonStyle"
            android:background="@drawable/button_custom"
            android:layout_marginTop="10dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/build_app"
            android:id="@+id/button4"
            android:layout_below="@+id/button3"
            android:layout_alignStart="@+id/button3"
            android:layout_alignEnd="@+id/button3"
            style="?android:attr/borderlessButtonStyle"
            android:background="@drawable/button_custom"
            android:layout_marginTop="10dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/xyz_app"
            android:id="@+id/button5"
            style="?android:attr/borderlessButtonStyle"
            android:background="@drawable/button_custom"
            android:layout_below="@+id/button4"
            android:layout_alignStart="@+id/button4"
            android:layout_marginTop="10dp"
            android:layout_alignEnd="@+id/button4" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/my_app"
            android:id="@+id/button6"
            style="?android:attr/borderlessButtonStyle"
            android:background="@drawable/button_custom"
            android:layout_below="@+id/button5"
            android:layout_marginTop="10dp"
            android:layout_alignStart="@+id/button5"
            android:layout_alignEnd="@+id/button5" />



</RelativeLayout>
